basic design and plan built, story boarding and researching options for layout and functionality

--- a/home.html
+++ b/home.html
@@ -9,7 +9,26 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<header>
+    <h1>Welcome to my Portfolio Page</h1>
+</header>
 <body>
-    
+    <nav id =top-nav>
+        <ul>
+            <li class = nav-links>
+                <a href="#">Home</a>
+            </li>
+            <li class = nav-links>
+                <a href="#">Bio</a>
+            </li>
+            <li class = nav-links>
+                <a href="#">Resume</a>
+            </li>
+            <li class = nav-links>
+                <a href="#">Projects</a>
+            </li>
+        </ul>
+    </nav>
+
 </body>
 </html>
