minor updates to text, plan formed for layout

--- a/home.html
+++ b/home.html
@@ -11,6 +11,7 @@
 </head>
 <header>
     <h1>Welcome to my Portfolio Page</h1>
+    <h2></h2>
 </header>
 <body>
     <nav id =top-nav>
@@ -29,6 +30,17 @@
             </li>
         </ul>
     </nav>
+    <section id = bio>
+        <h1>
+            Aaron Ledbetter
+        </h1>
+        <h3>
+            Who am I?
+        </h3>
+        <p>
+            After 15 years in various parts of the Security Industry I decided to make a career change to Software Engineering. I've spent the better part of the last 4 years working at Amazon Web Services as both a Program Security Officer, and the Communication Security Team Lead. 
+        </p>
+    </section>
 
 </body>
 </html>
