added pictures and dummy links, set up some css styling for easier viewing of secitons, and completed a fixed nav bar that jumps to sections of the page.

--- a/home.html
+++ b/home.html
@@ -9,37 +9,70 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header>
+<header id = home>
+<a id = jump-home></a>
     <h1>Welcome to my Portfolio Page</h1>
-    <h2></h2>
 </header>
 <body>
     <nav id =top-nav>
-        <ul>
+        <ul id = nav-ul>
             <li class = nav-links>
-                <a href="#">Home</a>
+                <a href ="#jump-home">Home</a>
             </li>
             <li class = nav-links>
-                <a href="#">Bio</a>
+                <a href= "#jump-bio">Bio</a>
             </li>
             <li class = nav-links>
-                <a href="#">Resume</a>
+                <a href="#jump-resume">Resume</a>
             </li>
             <li class = nav-links>
-                <a href="#">Projects</a>
+                <a href="#jump-projects">Projects</a>
             </li>
         </ul>
     </nav>
+
     <section id = bio>
+        <a id = jump-bio></a>
         <h1>
             Aaron Ledbetter
         </h1>
+            <img src="imgs/aaron.jpeg">
         <h3>
             Who am I?
         </h3>
         <p>
             After 15 years in various parts of the Security Industry I decided to make a career change to Software Engineering. I've spent the better part of the last 4 years working at Amazon Web Services as both a Program Security Officer, and the Communication Security Team Lead. 
         </p>
+    </section>
+
+    <section id = resume>
+        <a id = jump-resume></a>
+        <p>Click here to download my resume!</p>
+
+    </section>
+
+    <section id = projects>
+        <a id = jump-projects></a>
+        <h2>Here are a few of my projects!</h2>
+        <ul id = project-list>
+            <li class = project-links>
+                <p>Space Battle</p>
+                <a href="#"></a>
+            </li>
+            <li class = project-links>
+                <p>Landscaper</p>
+                <a href="#"></a>
+            </li>
+            <li class = project-links>
+                <p>Castle Battle</p>
+                <a href="#"></a>
+            </li>
+            <li class = project-links>
+                <p>Choose Your Own Adventure</p>
+                <a href="#"><img src=""></a>
+            </li>
+        </ul>
+
     </section>
 
 </body>
