new imgs added, links set for projects. site formating in process

--- a/home.html
+++ b/home.html
@@ -57,19 +57,19 @@
         <ul id = project-list>
             <li class = project-links>
                 <p>Space Battle</p>
-                <a href="#"></a>
+                <a href=""><img src ="imgs/space.jpeg"></a>
             </li>
             <li class = project-links>
                 <p>Landscaper</p>
-                <a href="#"></a>
+                <a href=""><img src="imgs/landscape.jpeg"</a>
             </li>
             <li class = project-links>
                 <p>Castle Battle</p>
-                <a href="#"></a>
+                <a href=""><img src="imgs/castle.jpeg"></a>
             </li>
             <li class = project-links>
                 <p>Choose Your Own Adventure</p>
-                <a href="#"><img src=""></a>
+                <a href=""><img src ="imgs/choose.png"></a>
             </li>
         </ul>
 
