slideshow is mostly set up

--- a/home.html
+++ b/home.html
@@ -9,30 +9,41 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header id = home>
-<a id = jump-home></a>
+<header id = "home">
+<a id = "jump-home"></a>
+    <div id = "slideshow">
+        <div class = "slides fade" id = "slide1">
+            <img src="imgs/IMG_1759.jpeg">
+        </div>
+        <div class = "slides fade" id ="slide2">
+            <img src="imgs/IMG_1814.jpeg">
+        </div>
+        <div class = "slides fade" id ="slide3"> 
+        <img src="imgs/IMG_1828.jpeg">
+        </div>
+    </div>
     <h1>Welcome to my Portfolio Page</h1>
 </header>
 <body>
-    <nav id =top-nav>
-        <ul id = nav-ul>
-            <li class = nav-links>
+    <nav id ="top-nav">
+        <ul id = "nav-ul">
+            <li class = "nav-links">
                 <a href ="#jump-home">Home</a>
             </li>
-            <li class = nav-links>
+            <li class = "nav-links">
                 <a href= "#jump-bio">Bio</a>
             </li>
-            <li class = nav-links>
+            <li class = "nav-links">
                 <a href="#jump-resume">Resume</a>
             </li>
-            <li class = nav-links>
+            <li class = "nav-links">
                 <a href="#jump-projects">Projects</a>
             </li>
         </ul>
     </nav>
 
-    <section id = bio>
-        <a id = jump-bio></a>
+    <section id = "bio">
+        <a id = "jump-bio"></a>
         <h1>
             Aaron Ledbetter
         </h1>
@@ -45,29 +56,29 @@
         </p>
     </section>
 
-    <section id = resume>
-        <a id = jump-resume></a>
-        <p>Click here to download my resume!</p>
+    <section id = "resume">
+        <a id = "jump-resume"></a>
+        <p>Click <a href="https://docs.google.com/document/d/1Ojmhs6ZiuclJKxKpe3MYCTvhkBLE26wz/edit?usp=sharing&ouid=111149969181393304246&rtpof=true&sd=true">here</a> to download my resume!</p>
 
     </section>
 
-    <section id = projects>
-        <a id = jump-projects></a>
+    <section id = "projects">
+        <a id = "jump-projects"></a>
         <h2>Here are a few of my projects!</h2>
-        <ul id = project-list>
-            <li class = project-links>
+        <ul id = "project-list">
+            <li class = "project-links">
                 <p>Space Battle</p>
                 <a href=""><img src ="imgs/space.jpeg"></a>
             </li>
-            <li class = project-links>
+            <li class = "project-links">
                 <p>Landscaper</p>
                 <a href=""><img src="imgs/landscape.jpeg"</a>
             </li>
-            <li class = project-links>
+            <li class = "project-links">
                 <p>Castle Battle</p>
                 <a href=""><img src="imgs/castle.jpeg"></a>
             </li>
-            <li class = project-links>
+            <li class = "project-links">
                 <p>Choose Your Own Adventure</p>
                 <a href=""><img src ="imgs/choose.png"></a>
             </li>
