--- a/home.html
+++ b/home.html
@@ -2,8 +2,6 @@
 <html lang="en">
 <head>
     <link rel="stylesheet" href="style.css">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="app.js">defer</script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,20 +9,24 @@
 </head>
 <header id = "home">
 <a id = "jump-home"></a>
-    <div id = "slideshow">
-        <div class = "slides fade" id = "slide1">
-            <img src="imgs/IMG_1759.jpeg">
-        </div>
-        <div class = "slides fade" id ="slide2">
-            <img src="imgs/IMG_1814.jpeg">
-        </div>
-        <div class = "slides fade" id ="slide3"> 
-        <img src="imgs/IMG_1828.jpeg">
-        </div>
-    </div>
-    <h1>Welcome to my Portfolio Page</h1>
+<h1>Welcome to my Portfolio Page</h1>
 </header>
 <body>
+    <section id = slideShow>
+        <div class = carousel>
+            <button id = "prev">&#8610;</button>
+            <button id = "next">&#8611;</button>
+                <div class = "slide slide--visible">
+                    <img src="imgs/IMG_1759.jpeg" alt="beach">
+                </div>
+                <div class = slide>
+                    <img src="imgs/IMG_1814.jpeg" alt="rocks">
+                </div>
+                <div class = slide>
+                    <img src="imgs/IMG_1828.jpeg" alt="car">
+                </div>
+        </div>
+    </section>
     <nav id ="top-nav">
         <ul id = "nav-ul">
             <li class = "nav-links">
@@ -85,6 +87,7 @@
         </ul>
 
     </section>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
