got hamburger working, and completed slideshow

--- a/home.html
+++ b/home.html
@@ -7,26 +7,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-<header id = "home">
-<a id = "jump-home"></a>
-<h1>Welcome to my Portfolio Page</h1>
-</header>
+
 <body>
-    <section id = slideShow>
-        <div class = carousel>
-            <button id = "prev">&#8610;</button>
-            <button id = "next">&#8611;</button>
-                <div class = "slide slide--visible">
-                    <img src="imgs/IMG_1759.jpeg" alt="beach">
-                </div>
-                <div class = slide>
-                    <img src="imgs/IMG_1814.jpeg" alt="rocks">
-                </div>
-                <div class = slide>
-                    <img src="imgs/IMG_1828.jpeg" alt="car">
-                </div>
-        </div>
-    </section>
     <nav id ="top-nav">
         <ul id = "nav-ul">
             <li class = "nav-links">
@@ -42,8 +24,31 @@
                 <a href="#jump-projects">Projects</a>
             </li>
         </ul>
+        <div class = "hamburger">
+            <span class = "bar"></span>
+            <span class = "bar"></span>
+            <span class = "bar"></span>
+        </div>
     </nav>
-
+    <header id = "home">
+        <a id = "jump-home"></a>
+        <h1>Welcome to my Portfolio Page</h1>
+        </header>
+    <section id = slideShow>
+        <div class = carousel>
+            <button id = "prev">&#8610;</button>
+            <button id = "next">&#8611;</button>
+                <div class = "slide slide--visible">
+                    <img src="imgs/IMG_1759.jpeg" alt="beach">
+                </div>
+                <div class = slide>
+                    <img src="imgs/IMG_1814.jpeg" alt="rocks">
+                </div>
+                <div class = slide>
+                    <img src="imgs/IMG_1828.jpeg" alt="car">
+                </div>
+        </div>
+    </section>
     <section id = "bio">
         <a id = "jump-bio"></a>
         <h1>
