added links for socials

--- a/home.html
+++ b/home.html
@@ -92,6 +92,16 @@
         </ul>
 
     </section>
+    <section class = nav-bot>
+        <ul class = socials>
+            <li class="soc-links">
+                <a href="https://www.linkedin.com/in/aaron-ledbetter-3a539a73/">LinkedIn</a>
+            </li>
+            <li class="soc-links">
+                <a href="https://github.com/aaronjled">GitHub</a>
+            </li>
+        </ul>
+    </section>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="app.js"></script>
 </body>
