--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
             <li class = "nav-links">
                 <a href="#jump-projects">Projects</a>
             </li>
+            <li class = "nav-links">
+                <a href="#jump-links">Links</a>
+            </li>
         </ul>
         <div class = "hamburger">
             <span class = "bar"></span>
@@ -51,16 +54,26 @@
     </section>
     <section id = "bio">
         <a id = "jump-bio"></a>
-        <h1>
-            Aaron Ledbetter
-        </h1>
-            <img src="imgs/aaron.jpeg">
-        <h3>
-            Who am I?
-        </h3>
-        <p>
-            After 15 years in various parts of the Security Industry I decided to make a career change to Software Engineering. I've spent the better part of the last 4 years working at Amazon Web Services as both a Program Security Officer, and the Communication Security Team Lead. 
-        </p>
+        <div class = "card">
+            <div class="card_inner">
+                <div class="card_face card_face--front">
+                    <h2>Who am I?</h2>
+                </div>
+                <div class="card_face card_face--back">
+                    <div class="card_content">
+                        <div class="card_header">
+                            <img src="imgs/aaron.jpeg" alt="" class="head">
+                            <h2>Aaron Ledbetter</h2>
+                        </div>
+                        <div class="card_body">
+                            <h3>Software Engineer</h3>
+                            <p>After 15 years in various parts of the Security Industry I decided to make a career change to Software Engineering. I've spent the better part of the last 4 years working at Amazon Web Services as both a Program Security Officer, and the Communication Security Team Lead. </p>
+                        </div>
+                    </div>
+                
+                </div>
+            </div>
+        </div>
     </section>
 
     <section id = "resume">
@@ -92,7 +105,13 @@
         </ul>
 
     </section>
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="app.js"></script>
+</body>
+<footer>
     <section class = nav-bot>
+        <a id = "jump-links"></a>
         <ul class = socials>
             <li class="soc-links">
                 <a href="https://www.linkedin.com/in/aaron-ledbetter-3a539a73/">LinkedIn</a>
@@ -101,8 +120,6 @@
                 <a href="https://github.com/aaronjled">GitHub</a>
             </li>
         </ul>
-    </section>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
-    <script src="app.js"></script>
-</body>
+    </section> 
+</footer>
 </html>
