completed all MVPs and styled most of the doc, need to finish styling resume page. connected all other pages.

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <img src="imgs/IMG_1814.jpeg" alt="rocks">
                 </div>
                 <div class = slide>
-                    <img src="imgs/IMG_1828.jpeg" alt="car">
+                    <img src="imgs/832B8CF6-7D30-4B8F-B0F9-4A73AFFB1746_1_105_c.jpeg" alt="sunset">
                 </div>
         </div>
     </section>
@@ -92,7 +92,7 @@
             </li>
             <li class = "project-links">
                 <p>Landscaper</p>
-                <a href=""><img src="imgs/landscape.jpeg"</a>
+                <a href=""><img src="imgs/landscape.jpeg"></a>
             </li>
             <li class = "project-links">
                 <p>Castle Battle</p>
@@ -118,6 +118,15 @@
             </li>
             <li class="soc-links">
                 <a href="https://github.com/aaronjled">GitHub</a>
+            </li>
+            <li class = page_links>
+                <a href="bio.html">Bio Page</a>
+            </li>
+            <li class = page_links>
+                <a href="resume.html">Resume Page</a>
+            </li>
+            <li class = page_links>
+                <a href="projects.html">Projects Page</a>
             </li>
         </ul>
     </section> 
